WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283740
REGRESSION (
286655@main
): [ MacOS iOS WK2 Debug ] http/wpt/webauthn/public-key-credential-get-success-u2f.https.html is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=283740
Summary
REGRESSION (286655@main): [ MacOS iOS WK2 Debug ] http/wpt/webauthn/public-k...
Jay Stfleur
Reported
2024-11-26 21:15:26 PST
Description: http/wpt/webauthn/public-key-credential-get-success-u2f.https.html Test is consistently crashing after changes committed on
286655@main
Buildbot URL:
https://build.webkit.org/#/builders/934/builds/4816
History:
https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fwebauthn%2Fpublic-key-credential-get-success-u2f.https.html&style=debug
Diff/Image Diff/Crash Log: ASSERTION FAILED: false /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Source/WebKit/UIProcess/WebAuthentication/fido/U2fAuthenticator.cpp(258) : void WebKit::U2fAuthenticator::continueSignCommandAfterResponseReceived(ApduResponse &&) 1 0x302a39c2c WebKit::U2fAuthenticator::continueSignCommandAfterResponseReceived(apdu::ApduResponse&&) 2 0x302a38c50 WebKit::U2fAuthenticator::responseReceived(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&, WebKit::U2fAuthenticator::CommandType) 3 0x302a458a4 WebKit::U2fAuthenticator::issueCommand(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WebKit::U2fAuthenticator::CommandType)::$_5::operator()(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&) const 4 0x302a456e8 WTF::Detail::CallableWrapper<WebKit::U2fAuthenticator::issueCommand(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WebKit::U2fAuthenticator::CommandType)::$_5, void, WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&>::call(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&) 5 0x3000f8d34 WTF::Function<void (WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&)>::operator()(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&) const 6 0x3000fae38 WebKit::CtapHidDriver::returnResponse(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&) 7 0x3000fb050 WebKit::CtapHidDriver::continueAfterResponseReceived(std::__1::optional<fido::FidoHidMessage>&&) 8 0x30010231c WebKit::CtapHidDriver::continueAfterChannelAllocated(std::__1::optional<fido::FidoHidMessage>&&)::$_5::operator()(std::__1::optional<fido::FidoHidMessage>&&) 9 0x3001021ec WTF::Detail::CallableWrapper<WebKit::CtapHidDriver::continueAfterChannelAllocated(std::__1::optional<fido::FidoHidMessage>&&)::$_5, void, std::__1::optional<fido::FidoHidMessage>&&>::call(std::__1::optional<fido::FidoHidMessage>&&) 10 0x3000fa090 WTF::Function<void (std::__1::optional<fido::FidoHidMessage>&&)>::operator()(std::__1::optional<fido::FidoHidMessage>&&) const 11 0x3000f9bc4 WebKit::CtapHidDriverWorker::returnMessage() 12 0x3000f9e78 WebKit::CtapHidDriverWorker::read(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&) 13 0x3000ff744 WebKit::CtapHidDriverWorker::write(WebKit::HidConnection::DataSent)::$_1::operator()(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&) 14 0x3000ff614 WTF::Detail::CallableWrapper<WebKit::CtapHidDriverWorker::write(WebKit::HidConnection::DataSent)::$_1, void, WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&>::call(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-26 21:31:48 PST
<
rdar://problem/140607217
>
Jay Stfleur
Comment 2
2024-11-26 21:40:59 PST
Test is crashing on WK2 Ventura+ and iOS Debug
EWS
Comment 3
2024-11-26 22:03:42 PST
Test gardening commit
287113@main
(ad53d79d78a7): <
https://commits.webkit.org/287113@main
> Reviewed commits have been landed. Closing PR #37178 and removing active labels.
Nitin Mahendru
Comment 4
2024-12-04 09:36:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37439
EWS
Comment 5
2024-12-06 15:36:36 PST
merge-queue failed to commit PR to repository. To retry, remove any blocking labels and re-apply merge-queue label
EWS
Comment 6
2024-12-06 15:50:15 PST
Committed
287464@main
(b1d0fe1e0f90): <
https://commits.webkit.org/287464@main
> Reviewed commits have been landed. Closing PR #37439 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug