[WebAuthn] Fixing the Assert condition that was wrongly inverted. https://bugs.webkit.org/show_bug.cgi?id=283740 radar://140607217

Reviewed by Pascoe and John Wilander.

In 286655@main I added a log message for an ASSERT and mistakenly inverted the
conditional inside it. This change fixes that.
It also removes the Failure text expectations as the test was already fixed in
https://bugs.webkit.org/show_bug.cgi?id=274807

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/UIProcess/WebAuthentication/fido/U2fAuthenticator.cpp:
(WebKit::U2fAuthenticator::continueSignCommandAfterResponseReceived):

Canonical link: https://commits.webkit.org/287464@main