Source/WebKit/UIProcess/WebAuthentication/fido/U2fAuthenticator.cpp
@@ -253,7 +253,7 @@ void U2fAuthenticator::continueSignCommandAfterResponseReceived(ApduResponse&& a
         U2F_RELEASE_LOG("continueSignCommandAfterResponseReceived: m_isAppId=%d", m_isAppId);
         RefPtr<AuthenticatorAssertionResponse> response;
         if (m_isAppId) {
-            if (requestOptions.extensions && !requestOptions.extensions->appid.isNull()) {
+            if (!(requestOptions.extensions && !requestOptions.extensions->appid.isNull())) {
                 U2F_RELEASE_LOG("continueSignCommandAfterResponseReceived: appid and m_isAppId mismatch");
                 ASSERT(false);
             }
